trunk/Archive2/51/467801d3c8f3ce/output
main.cpp: In function 'int main()':
main.cpp:17:9: error: invalid conversion from 'int' to 'TestEnum' [-fpermissive]
     f1(1);
         ^
